--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -1,6 +1,27 @@
-.modal-body {
+.modal-container {
+  position: fixed;
   display: flex;
-  width: 600px;
+  width: calc(100vw - (100vw - 100%));
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.1);
+  transition: opacity 0.3s ease;
+  opacity: 0;
+}
+.modal-container.show {
+  opacity: 1;
+}
+
+.modal-body {
+  position: absolute;
+  right: auto;
+  left: auto;
+  top: auto;
+  bottom: auto;
+  display: flex;
+  width: 100%;
+  max-width: 600px;
   padding: 24px;
   flex-direction: column;
   justify-content: flex-end;
@@ -17,6 +38,7 @@
   align-items: center;
   gap: 8px;
   align-self: stretch;
+  margin: 0;
 }
 .modal-footer {
   display: flex;
@@ -24,4 +46,24 @@
   align-items: center;
   justify-content: flex-end;
   gap: 8px;
+}
+
+/* تعریف انیمیشن fadeIn */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* تعریف انیمیشن fadeOut */
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
