--- a/src/components/Checkbox/style.css
+++ b/src/components/Checkbox/style.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   gap: 4px;
-  direction: rtl;
+  /* direction: rtl; */
   position: relative;
 }
 .checkbox-input {
