--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -1,4 +1,4 @@
-button {
+.button {
   display: inline-flex;
   height: 32px;
   padding: 4px 12px;
@@ -18,195 +18,195 @@ button {
   width: 100%;
 }
 
-.base {
+.button.base {
   background: var(--neutral-light-alpha-n-20-a, rgba(9, 30, 66, 0.04));
   color: var(--neutral-light-n-500, #42526e);
 }
-.base img {
+.button.base img {
   filter: brightness(0) saturate(100%) invert(32%) sepia(11%) saturate(1263%)
     hue-rotate(179deg) brightness(95%) contrast(95%);
 }
 
-.primary {
+.button.primary {
   background: var(--Blue-B400, #0052cc);
   color: var(--neutral-light-no, #fff);
 }
-.primary img {
+.button.primary img {
   filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(5%)
     hue-rotate(86deg) brightness(102%) contrast(101%);
 }
-.warning {
+.button.warning {
   background: var(--Yellow-Y300, #ffab00);
   color: var(--neutral-light-n-800, #172b4d);
 }
-.warning img {
+.button.warning img {
   filter: brightness(0) saturate(100%) invert(15%) sepia(9%) saturate(4664%)
     hue-rotate(179deg) brightness(94%) contrast(94%);
 }
-.danger {
+.button.danger {
   background: var(--Red-R400, #de350b);
   color: var(--neutral-light-no, #fff);
 }
-.danger img {
+.button.danger img {
   filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(5%)
     hue-rotate(86deg) brightness(102%) contrast(101%);
 }
-.link {
+.button.link {
   background: var(--neutral-light-no-1, rgba(255, 255, 255, 0));
   color: var(--Blue-B400, #0052cc);
 }
-.link img {
+.button.link img {
   filter: brightness(0) saturate(100%) invert(23%) sepia(86%) saturate(1869%)
     hue-rotate(203deg) brightness(94%) contrast(114%);
 }
-.subtle {
+.button.subtle {
   background: var(--neutral-light-no-1, rgba(255, 255, 255, 0));
   color: var(--neutral-light-n-500, #42526e);
 }
-.subtle img {
+.button.subtle img {
   filter: brightness(0) saturate(100%) invert(30%) sepia(10%) saturate(1555%)
     hue-rotate(179deg) brightness(97%) contrast(92%);
 }
-.subtleLink {
+.button.subtleLink {
   background: var(--neutral-light-no-1, rgba(255, 255, 255, 0));
   color: var(--neutral-light-n-500, #42526e);
 }
-.subtleLink img {
+.button.subtleLink img {
   filter: brightness(0) saturate(100%) invert(30%) sepia(10%) saturate(1555%)
     hue-rotate(179deg) brightness(97%) contrast(92%);
 }
 
-.base:hover {
+.button.base:hover {
   background: var(--neutral-light-alpha-n-30-a, rgba(9, 30, 66, 0.08));
   color: var(--neutral-light-n-500, #42526e);
 }
-.base:hover img {
+.button.base:hover img {
   filter: brightness(0) saturate(100%) invert(30%) sepia(10%) saturate(1555%)
     hue-rotate(179deg) brightness(97%) contrast(92%);
 }
-.primary:hover {
+.button.primary:hover {
   background: var(--Blue-B300, #0065ff);
   color: var(--neutral-light-no, #fff);
 }
-.primary:hover img {
+.button.primary:hover img {
   filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(5%)
     hue-rotate(86deg) brightness(102%) contrast(101%);
 }
-.warning:hover {
+.button.warning:hover {
   background: var(--Yellow-Y200, #ffc400);
   color: var(--neutral-light-n-800, #172b4d);
 }
-.warning:hover img {
+.button.warning:hover img {
   filter: brightness(0) saturate(100%) invert(16%) sepia(25%) saturate(1239%)
     hue-rotate(176deg) brightness(96%) contrast(100%);
 }
-.danger:hover {
+.button.danger:hover {
   background: var(--Red-R300, #ff5630);
   color: var(--neutral-light-no, #fff);
 }
-.danger:hover img {
+.button.danger:hover img {
   filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(5%)
     hue-rotate(86deg) brightness(102%) contrast(101%);
 }
-.link:hover {
+.button.link:hover {
   background: var(--neutral-light-no-1, rgba(255, 255, 255, 0));
   color: var(--Blue-B300, #0065ff);
 }
-.link:hover img {
+.button.link:hover img {
   filter: brightness(0) saturate(100%) invert(21%) sepia(75%) saturate(3665%)
     hue-rotate(213deg) brightness(105%) contrast(106%);
 }
-.subtle:hover {
+.button.subtle:hover {
   background: var(--neutral-light-alpha-n-30-a, rgba(9, 30, 66, 0.08));
   color: var(--neutral-light-n-500, #42526e);
 }
-.subtle:hover img {
+.button.subtle:hover img {
   filter: brightness(0) saturate(100%) invert(31%) sepia(12%) saturate(1256%)
     hue-rotate(179deg) brightness(95%) contrast(93%);
 }
-.subtleLink:hover {
+.button.subtleLink:hover {
   background: var(--neutral-light-no-1, rgba(255, 255, 255, 0));
   color: var(--neutral-light-n-90, #8993a4);
 }
-.subtleLink:hover img {
+.button.subtleLink:hover img {
   filter: brightness(0) saturate(100%) invert(63%) sepia(7%) saturate(677%)
     hue-rotate(179deg) brightness(90%) contrast(89%);
 }
 
-.base:active {
+.button.base:active {
   background: var(--blue-b-7560, rgba(179, 212, 255, 0.6));
   color: var(--Blue-B400, #0052cc);
 }
-.base:active img {
+.button.base:active img {
   filter: brightness(0) saturate(100%) invert(20%) sepia(91%) saturate(2359%)
     hue-rotate(208deg) brightness(97%) contrast(104%);
 }
-.primary:active {
+.button.primary:active {
   background: var(--Blue-B500, #0747a6);
   color: var(--neutral-light-no, #fff);
 }
-.primary:active img {
+.button.primary:active img {
   filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(6027%)
     hue-rotate(47deg) brightness(105%) contrast(97%);
 }
-.warning:active {
+.button.warning:active {
   background: var(--Yellow-Y400, #ff991f);
   color: var(--neutral-light-n-800, #172b4d);
 }
-.warning:active img {
+.button.warning:active img {
   filter: brightness(0) saturate(100%) invert(13%) sepia(56%) saturate(704%)
     hue-rotate(176deg) brightness(97%) contrast(94%);
 }
-.danger:active {
+.button.danger:active {
   background: var(--Red-R500, #bf2600);
   color: var(--neutral-light-no, #fff);
 }
-.danger:active img {
+.button.danger:active img {
   filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(6027%)
     hue-rotate(47deg) brightness(105%) contrast(97%);
 }
-.link:active {
+.button.link:active {
   background: var(--neutral-light-no-1, rgba(255, 255, 255, 0));
   color: var(--Blue-B500, #0747a6);
 }
-.link:active img {
+.button.link:active img {
   filter: brightness(0) saturate(100%) invert(16%) sepia(34%) saturate(6695%)
     hue-rotate(211deg) brightness(100%) contrast(95%);
 }
-.subtle:active {
+.button.subtle:active {
   background: var(--blue-b-7560, rgba(179, 212, 255, 0.6));
   color: var(--Blue-B400, #0052cc);
 }
-.subtle:active img {
+.button.subtle:active img {
   filter: brightness(0) saturate(100%) invert(18%) sepia(96%) saturate(2779%)
     hue-rotate(210deg) brightness(93%) contrast(101%);
 }
-.subtleLink:active {
+.button.subtleLink:active {
   background: var(--neutral-light-no-1, rgba(255, 255, 255, 0));
   color: var(--neutral-light-n-400, #505f79);
 }
-.subtleLink:active img {
+.button.subtleLink:active img {
   filter: brightness(0) saturate(100%) invert(37%) sepia(4%) saturate(2842%)
     hue-rotate(180deg) brightness(94%) contrast(91%);
 }
 
-.disabled,
-.disabled:hover,
-.disabled:active {
+.button.disabled,
+.button.disabled:hover,
+.button.disabled:active {
   background: var(--neutral-light-alpha-n-20-a, rgba(9, 30, 66, 0.04));
   color: var(--neutral-light-n-70, #a5adba);
   cursor: default;
 }
 
-.disabled img,
-.disabled:hover img,
-.disabled:active img {
+.button.disabled img,
+.button.disabled:hover img,
+.button.disabled:active img {
   filter: brightness(0) saturate(100%) invert(70%) sepia(11%) saturate(280%)
     hue-rotate(178deg) brightness(96%) contrast(94%);
 }
 
-.first-icon,
-.last-icon {
+.button .first-icon,
+.button .last-icon {
   width: 24px;
   height: 24px;
 }
