--- a/src/components/TextField/style.css
+++ b/src/components/TextField/style.css
@@ -6,14 +6,14 @@
   box-sizing: border-box;
   /* direction: rtl; */
 }
-.textField-label {
+.textField-container .textField-label {
   color: var(--neutral-light-n-200, #6b778c);
   font-size: 12px;
   font-style: normal;
   font-weight: 600;
   line-height: 16px;
 }
-.textField-input {
+.textField-container .textField-input {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -25,7 +25,7 @@
   gap: 6px;
 }
 
-.textField-input input {
+.textField-container .textField-input input {
   outline: none;
   border: none;
   width: 100%;
@@ -37,76 +37,76 @@
   background-color: rgba(0, 0, 0, 0);
 }
 
-.textField-input img {
+.textField-container .textField-input img {
   width: 24px;
   height: 24px;
 }
 
-.textField-message {
+.textField-container .textField-message {
   display: flex;
   width: 100%;
   align-items: center;
   gap: 2px;
 }
 
-.textField-input.errorMessage {
+.textField-container .textField-input.errorMessage {
   border: 2px solid var(--Red-R400, #de350b);
 }
 
-.textField-guidMessage,
-.textField-successMessage,
-.textField-errorMessage {
+.textField-container .textField-guidMessage,
+.textField-container .textField-successMessage,
+.textField-container .textField-errorMessage {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
   line-height: 20px;
   width: 100%;
 }
-.textField-guidMessage {
+.textField-container .textField-guidMessage {
   color: var(--neutral-light-n-100, #7a869a);
 }
-.textField-successMessage {
+.textField-container .textField-successMessage {
   color: var(--Green-G400, #00875a);
 }
-.textField-errorMessage {
+.textField-container .textField-errorMessage {
   color: var(--Red-R400, #de350b);
 }
-.textField-guidIcon {
+.textField-container .textField-guidIcon {
   width: 16px;
   height: 16px;
   filter: brightness(0) saturate(100%) invert(52%) sepia(8%) saturate(773%)
     hue-rotate(177deg) brightness(99%) contrast(94%);
 }
-.textField-successIcon {
+.textField-container .textField-successIcon {
   width: 16px;
   height: 16px;
   filter: brightness(0) saturate(100%) invert(37%) sepia(52%) saturate(887%)
     hue-rotate(113deg) brightness(94%) contrast(100%);
 }
-.textField-errorIcon {
+.textField-container .textField-errorIcon {
   width: 16px;
   height: 16px;
   filter: brightness(0) saturate(100%) invert(21%) sepia(90%) saturate(3998%)
     hue-rotate(9deg) brightness(96%) contrast(91%);
 }
 
-.textField-input:hover {
+.textField-container .textField-input:hover {
   border: 2px solid var(--neutral-light-n-40, #dfe1e6);
   background: var(--neutral-light-n-30, #ebecf0);
 }
-.textField-input:focus-within {
+.textField-container .textField-input:focus-within {
   background: var(--neutral-light-no, #fff);
   border: 2px solid var(--Blue-B100, #4c9aff);
 }
 
-.textField-input .disabled { 
+.textField-container .textField-input .disabled {
   background: var(--neutral-light-n-10, #fafbfc);
   border: #fafbfc;
 }
-.textField-input .disabled input {
+.textField-container .textField-input .disabled input {
   color: var(--neutral-light-n-70, #a5adba);
 }
-.textField-input .disabled img {
+.textField-container .textField-input .disabled img {
   filter: brightness(0) saturate(100%) invert(73%) sepia(12%) saturate(263%)
     hue-rotate(176deg) brightness(92%) contrast(92%);
 }
