--- a/src/components/Toggle/style.css
+++ b/src/components/Toggle/style.css
@@ -12,10 +12,10 @@
 .toggle-container:active {
   border: 2px solid var(--Blue-B100, #4c9aff);
 }
-.toggle-body {
+.toggle-container .toggle-body {
   cursor: pointer;
 }
-.toggle-body.not-active {
+.toggle-container .toggle-body.not-active {
   display: flex;
   padding: 2px 2px 2px 6px;
   justify-content: center;
@@ -24,14 +24,14 @@
   border-radius: 16px;
   background: var(--neutral-light-n-200, #6b778c);
 }
-.toggle-body.not-active:hover {
+.toggle-container .toggle-body.not-active:hover {
   background: var(--neutral-light-n-70, #a5adba);
 }
-.toggle-body.not-active.disable {
+.toggle-container .toggle-body.not-active.disable {
   background: var(--neutral-light-n-20, #f4f5f7);
   cursor: default;
 }
-.toggle-body.active {
+.toggle-container .toggle-body.active {
   display: inline-flex;
   padding: 2px 2px 2px 6px;
   justify-content: center;
@@ -40,10 +40,10 @@
   border-radius: 16px;
   background: var(--Green-G400, #00875a);
 }
-.toggle-body.active:hover {
+.toggle-container .toggle-body.active:hover {
   background: var(--Green-G300, #36b37e);
 }
-.toggle-body.active.disable {
+.toggle-container .toggle-body.active.disable {
   background: var(--neutral-light-n-20, #f4f5f7);
   cursor: default;
 }
