--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -13,7 +13,7 @@
   opacity: 1;
 }
 
-.modal-body {
+.modal-container .modal-body {
   position: absolute;
   right: auto;
   left: auto;
@@ -24,7 +24,7 @@
   max-width: 600px;
   padding: 24px;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: flex-start;
   gap: 16px;
   background: var(--neutral-light-no, #fff);
@@ -32,7 +32,10 @@
     0px 3px 5px 0px rgba(9, 30, 66, 0.2),
     0px 0px 1px 0px rgba(9, 30, 66, 0.31);
 }
-.modal-title {
+.modal-container .modal-button {
+  width: 50%;
+}
+.modal-container .modal-title {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -40,11 +43,14 @@
   align-self: stretch;
   margin: 0;
 }
-.modal-footer {
+.modal-container .modal-description {
+  width: 100%;
+}
+.modal-container .modal-footer {
   display: flex;
   width: 100%;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   gap: 8px;
 }
 
@@ -56,7 +62,6 @@
     opacity: 1;
   }
 }
-
 
 @keyframes fadeOut {
   from {
