--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -35,6 +35,7 @@
     hue-rotate(86deg) brightness(102%) contrast(101%);
 }
 .button.secondary {
+  background: var(--neutral-light-no-1, rgba(255, 255, 255, 0));
   color: var(--Blue-B400, #0052cc);
   border: 1px solid #0052cc;
 }
@@ -163,6 +164,7 @@
     hue-rotate(47deg) brightness(105%) contrast(97%);
 }
 .button.secondary:active {
+  background: var(--neutral-light-no-1, rgba(255, 255, 255, 0));
   color: var(--Blue-B500, #0747a6);
   border: 1px solid #0747a6;
 }
