--- a/src/components/ProgressTracker/style.css
+++ b/src/components/ProgressTracker/style.css
@@ -31,6 +31,7 @@
 
 .progressTracker-step.active .progressTracker-stepTilte {
   color: var(--Blue-B300, #0065ff);
+  white-space: nowrap
 }
 .progressTracker-step.active .progressTracker-stepCircle {
   background-color: var(--Blue-B300, #0065ff);
