--- a/src/components/Checkbox/style.css
+++ b/src/components/Checkbox/style.css
@@ -38,16 +38,16 @@
   display: block;
 }
 .checkbox-square:after {
-  right: 5px;
-  bottom: 4px;
-  width: 5px;
-  height: 12px;
-  border: solid white;
-  border-width: 0 5px 5px 0;
-  border-radius: 0 0 3px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
+  right: 5px !important;
+  bottom: 4px !important;
+  width: 5px !important;
+  height: 12px !important;
+  border: solid white !important;
+  border-width: 0 5px 5px 0 !important;
+  border-radius: 0 0 3px 0 !important;
+  -webkit-transform: rotate(45deg) !important;
+  -ms-transform: rotate(45deg) !important;
+  transform: rotate(45deg) !important;
 }
 .checkbox-input:checked {
   background-color: #0052cc;
