--- a/src/components/Checkbox/style.css
+++ b/src/components/Checkbox/style.css
@@ -21,7 +21,6 @@
   width: 20px;
   height: 20px;
   cursor: pointer;
-  margin: 0;
   margin: 0px 3px;
   border: 3px solid #dfe1e6;
   border-radius: 8px;
@@ -38,16 +37,16 @@
   display: block;
 }
 .checkbox-square:after {
-  right: 5px !important;
-  bottom: 4px !important;
-  width: 5px !important;
-  height: 12px !important;
-  border: solid white !important;
-  border-width: 0 5px 5px 0 !important;
-  border-radius: 0 0 3px 0 !important;
-  -webkit-transform: rotate(45deg) !important;
-  -ms-transform: rotate(45deg) !important;
-  transform: rotate(45deg) !important;
+  right: 3px;
+  bottom: 2px;
+  width: 10px;
+  height: 15px;
+  border: solid white;
+  border-width: 0 5px 5px 0;
+  border-radius: 0 0 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 .checkbox-input:checked {
   background-color: #0052cc;
