--- a/src/components/Checkbox/style.css
+++ b/src/components/Checkbox/style.css
@@ -21,6 +21,7 @@
   width: 20px;
   height: 20px;
   cursor: pointer;
+  margin: 0;
   margin: 0px 3px;
   border: 3px solid #dfe1e6;
   border-radius: 8px;
@@ -38,11 +39,11 @@
 }
 .checkbox-square:after {
   right: 3px;
-  bottom: 2px;
-  width: 10px;
-  height: 15px;
+  bottom: 1px;
+  width: 8px;
+  height: 14px;
   border: solid white;
-  border-width: 0 5px 5px 0;
+  border-width: 0 4px 4px 0;
   border-radius: 0 0 3px 0;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
