--- a/src/components/SelectInput/style.css
+++ b/src/components/SelectInput/style.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
+  position: relative;
 }
 .selectInput-title {
   display: flex;
@@ -94,6 +95,9 @@
   line-height: 20px;
 }
 .selectInput-menu {
+  position: absolute;
+  width: 100%;
+  top: 70px;
   display: flex;
   flex-direction: column;
   padding: 4px 0px;
@@ -116,6 +120,7 @@
   line-height: 20px;
   cursor: pointer;
   user-select: none;
+  z-index: 110;
 }
 
 .selectInput-container.disabled .selectInput-input {
