--- a/src/components/SelectInput/style.css
+++ b/src/components/SelectInput/style.css
@@ -108,6 +108,7 @@
     0px 0px 1px 0px rgba(9, 30, 66, 0.31);
   max-height: 264px;
   overflow-y: auto;
+  z-index: 110;
 }
 .selectInput-menu-menuItem {
   display: flex;
