--- a/src/components/SelectInput/style.css
+++ b/src/components/SelectInput/style.css
@@ -140,9 +140,9 @@
   color: #a5adba;
 }
 
-.out-of-component {
+/* .out-of-component {
   position: fixed;
   width: 100%;
   height: 100%;
   z-index: 100;
-}
+} */
