--- a/src/components/SelectInput/style.css
+++ b/src/components/SelectInput/style.css
@@ -93,6 +93,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: 20px;
+  user-select: none;
 }
 .selectInput-menu {
   position: absolute;
